# Amply-musicplayer

./: .gitignore  README.md  RELEASE_NOTES_v1.4.0.txt  RELEASE_NOTES_v1.4.1.txt  RELEASE_NOTES_v1.4.2.txt  RELEASE_NOTES_v1.4.3.txt  RELEASE_NOTES_v1.4.4.txt  RELEASE_NOTES_v1.5.0.txt  RELEASE_NOTES_v1.5.1.txt  RELEASE_NOTES_v1.5.2.txt  RELEASE_NOTES_v1.5.3.txt  RELEASE_NOTES_v1.5.4.txt  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  tsconfig.node.json  vite.config.ts
certs/: Amply-Store-CNOnly.cer  Amply-Store-CNOnly.pfx  Amply-Store.cer  Amply-Store.pfx  Amply-Test.cer  Amply-Test.pfx
icons/: icon.icns
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: compute.rs  main.rs  metadata.rs  playlist.rs
src/components/AlbumCard/: AlbumCard.tsx
src/components/ArtworkImage/: ArtworkImage.tsx
src/components/ErrorBoundary/: ErrorBoundary.tsx
src/components/LyricsViewer/: LyricsViewer.tsx
src/components/NowPlayingPanel/: NowPlayingPanel.tsx
src/components/OptimizedImage/: OptimizedImage.tsx
src/components/Player/: PlayerBar.tsx
src/components/Playlists/: PlaylistComposer.tsx
src/components/Sidebar/: Sidebar.tsx
src/components/SongList/: SongList.tsx
src/hooks/: useAlbumArtFrequency.ts  useArtworkReady.ts  useFpsMonitor.ts  useGlobalShortcuts.ts  useIdleRender.ts  useMediaSession.ts  useMetadataPriority.ts  useOverlayController.ts
src/pages/GameMode/: index.tsx
src/pages/Home/: index.tsx
src/pages/NowPlaying/: index.tsx
src/pages/Overlay/: index.tsx
src/pages/PlaylistDetail/: index.tsx
src/pages/Playlists/: index.tsx
src/pages/Search/: index.tsx
src/pages/Settings/: index.tsx
src/pages/Stats/: index.tsx
src/services/: albumArtworkService.ts  albumTracklistService.ts  artistProfileService.ts  audioDeviceService.ts  audioEngine.ts  loudnessService.ts  lyricsFetcher.ts  metadataActivityGate.ts  metadataAttemptService.ts  metadataCacheIndex.ts  metadataParser.ts  metadataPriority.ts  musicScanner.ts  playlistArtworkService.ts  playlistGenerator.ts  queueCacheService.ts  rustPlaylistService.ts  songMetadataService.ts  statsService.ts  storageService.ts
src/store/: libraryStore.ts  playerStore.ts
src/types/: music.ts
src/utils/: artists.ts  lrc.ts  search.ts  time.ts
