[package]
name = "amply"
version = "1.4.1"
edition = "2021"
description = "Amply offline music player"
authors = ["Amply Studio <hello@amply.local>"]

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
base64 = "0.22"
dirs = "6.0"
lofty = "0.21"
rfd = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.0.0", features = ["protocol-asset", "image-png", "tray-icon"] }
tauri-plugin-autostart = "2.0.0"
walkdir = "2.5"
rodio = "0.20"
ebur128 = "0.1"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"

[package.metadata.winres]
ProductName = "Amply"
FileDescription = "Amply offline music player"
OriginalFilename = "Amply.exe"
CompanyName = "Amply Studio"
LegalCopyright = "Copyright (c) 2026 Amply Studio"
