[package]
name = "amply"
version = "1.5.3"
edition = "2021"
description = "Amply Music Player"
authors = ["Adithya KV <adithyakrishnan.vinod@gmail.com>"]

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
base64 = "0.22"
dirs = "6.0"
lofty = "0.21"
rfd = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["std"] }
reqwest = { version = "0.12", features = ["json", "gzip", "brotli", "deflate", "rustls-tls"] }
regex = "1.10"
once_cell = "1.19"
urlencoding = "2.1"
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
tokio = { version = "1.38", features = ["time"] }
unicode-normalization = "0.1"
tauri = { version = "2.0.0", features = ["protocol-asset", "image-png"] }
tauri-plugin-autostart = "2.0.0"
walkdir = "2.5"
rodio = "0.20"
ebur128 = "0.1"
windows = { version = "0.58", features = ["Win32_Foundation", "Win32_Media_Audio", "Win32_System_Com", "Win32_System_Threading", "Win32_UI_WindowsAndMessaging", "Win32_UI_Input_KeyboardAndMouse", "Win32_Graphics_Gdi"] }

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"

[package.metadata.winres]
ProductName = "Amply Music Player"
FileDescription = "Amply Music Player"
OriginalFilename = "Amply.exe"
CompanyName = "Adithya KV"
LegalCopyright = "Copyright (c) 2026 Adithya KV"
